--- a/src/app/pages/badges/badges.component.html
+++ b/src/app/pages/badges/badges.component.html
@@ -10,8 +10,20 @@
   </div>
 
   @if (viewingProfile()) {
-    <div class="profile-section">
-      <app-profile-header [profile]="viewingProfile()" [pubkey]="viewingPubkey()" [compact]="true"></app-profile-header>
+    <div class="minimal-profile">
+      <img 
+        [src]="viewingProfile()?.data?.picture || 'assets/default-avatar.png'" 
+        alt="Profile picture"
+        class="profile-avatar"
+      />
+      <div class="profile-info">
+        <div class="profile-name">
+          {{ viewingProfile()?.data?.display_name || viewingProfile()?.data?.name || 'Anonymous' }}
+        </div>
+        <div class="profile-identifier">
+          {{ getProfileIdentifier() }}
+        </div>
+      </div>
     </div>
   }
 
@@ -36,8 +48,9 @@
       <div class="badges-list" cdkDropList (cdkDropListDropped)="onBadgeDropped($event)">
         @for (badge of accepted(); track badge.aTag) {
         <div cdkDrag class="badge-drag-container">
-          <app-badge [badge]="badge" layout="horizontal" [showActions]="true" [isUpdating]="isUpdating()" [isAccepted]="true"
-            (viewClicked)="viewBadgeDetailsById(badge.id, badge.slug)" (removeClicked)="removeBadge(badge)">
+          <app-badge [badge]="badge" layout="horizontal" [showActions]="true" [isUpdating]="isUpdating()"
+            [isAccepted]="true" (viewClicked)="viewBadgeDetailsById(badge.id, badge.slug)"
+            (removeClicked)="removeBadge(badge)">
           </app-badge>
           <div class="badge-drag-placeholder" *cdkDragPlaceholder></div>
         </div>
